--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,9 @@ dev = [
     "unstructured[pdf]==0.18.15",
     "ipykernel==7.1.0",
     "pip==25.3",
-    "faiss-cpu==1.12.0"
+    "faiss-cpu==1.12.0",
+    "langchain-docling==1.1.0",
+    "docling==2.61.1"
 ]
 
 [tool.isort]
