--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,9 @@ dev = [
     "pip==25.3",
     "faiss-cpu==1.12.0",
     "langchain-docling==1.1.0",
-    "docling==2.61.1"
+    "docling==2.61.1",
+    "langgraph-checkpoint-sqlite==3.0.0",
+    "langgraph==1.0.1",
 ]
 
 [tool.isort]
