--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,35 +5,26 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "google==3.0.0",
-    "langchain==0.3.27",
-    "langchain-community>=0.3.28",
-    "langchain-core==0.3.74",
-    "langchain-google-genai==2.1.9",
-    "langchain-google-vertexai==2.0.28",
-    "pydantic-settings==2.11.0",
-    "timescale-vector==0.0.7",
-    "unstructured[pdf]==0.18.15",
 ]
 
 [dependency-groups]
 dev = [
     "google==3.0.0",
-    "langchain==0.3.27",
+    "langchain==1.1.0",
     "langchain-community>=0.3.28",
-    "langchain-core==0.3.74",
-    "langchain-google-genai==2.1.9",
-    "langchain-google-vertexai==2.0.28",
+    "langchain-core==1.1.0",
+    "langchain-google-genai==3.2.0",
+    "langchain-google-vertexai==3.1.0",
     "pydantic-settings==2.11.0",
-    "timescale-vector==0.0.7",
-    "unstructured[pdf]==0.18.15",
     "ipykernel==7.1.0",
     "pip==25.3",
     "faiss-cpu==1.12.0",
-    "langchain-docling==1.1.0",
+    "langchain-docling==2.0.0",
     "docling==2.61.1",
     "langgraph-checkpoint-sqlite==3.0.0",
-    "langgraph==1.0.1",
+    "langgraph==1.0.4",
+    "streamlit==1.51.0",
+    "langgraph-cli[inmem]==0.4.3"
 ]
 
 [tool.isort]
