--- a/compose.yaml
+++ b/compose.yaml
@@ -4,13 +4,18 @@ services:
     ports:
       - "8000:8000"
     env_file:
-      - .env-docker
+      - .env
     volumes:
-      - ${VECTORSTORE_PATH}:${VECTORSTORE_PATH}
-      - ${GCP_CREDENTIALS}:${GCP_CREDENTIALS}
-      - ${SQLITE_MEMORY_DATABASE}:${SQLITE_MEMORY_DATABASE}
-      - ${CACHE_FILE_PATH}:${CACHE_FILE_PATH}
+      - ${VECTORSTORE_PATH}:/app/vectorstore/
+      - ${PDF_FOLDER}:/app/pdfs/
+      - ${GCP_CREDENTIALS}:/app/gcp_credentials.json
+      - ${CACHE_FOLDER_PATH}:/app/cache/
       - /tmp/temp_uploads:/tmp/temp_uploads
+    environment:
+      - VECTORSTORE_PATH=/app/vectorstore/
+      - PDF_FOLDER=/app/pdfs/
+      - GCP_CREDENTIALS=/app/gcp_credentials.json
+      - CACHE_FOLDER_PATH=/app/cache/
     depends_on:
       - redis
       - worker
@@ -32,13 +37,18 @@ services:
     depends_on:
       - redis
     env_file:
-      - .env-docker
+      - .env
     volumes:
-      - ${VECTORSTORE_PATH}:${VECTORSTORE_PATH}
-      - ${GCP_CREDENTIALS}:${GCP_CREDENTIALS}
-      - ${SQLITE_MEMORY_DATABASE}:${SQLITE_MEMORY_DATABASE}
-      - ${CACHE_FILE_PATH}:${CACHE_FILE_PATH}
+      - ${VECTORSTORE_PATH}:/app/vectorstore/
+      - ${PDF_FOLDER}:/app/pdfs/
+      - ${GCP_CREDENTIALS}:/app/gcp_credentials.json
+      - ${CACHE_FOLDER_PATH}:/app/cache/
       - /tmp/temp_uploads:/tmp/temp_uploads
+    environment:
+      - VECTORSTORE_PATH=/app/vectorstore/
+      - PDF_FOLDER=/app/pdfs/
+      - GCP_CREDENTIALS=/app/gcp_credentials.json
+      - CACHE_FOLDER_PATH=/app/cache/
   redis:
     image: redis:7
     ports:
