--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,8 @@ dependencies = [
     "streamlit==1.51.0",
     "uvicorn[standard]==0.38.0",
     "fastapi==0.123.0",
-    "python-multipart==0.0.20"
+    "python-multipart==0.0.20",
+    "python-toon==0.1.3"
 ]
 
 [dependency-groups]
@@ -48,7 +49,8 @@ dev = [
     "streamlit==1.51.0",
     "uvicorn[standard]==0.38.0",
     "fastapi==0.123.0",
-    "python-multipart==0.0.20"
+    "python-multipart==0.0.20",
+    "python-toon==0.1.3"
 ]
 
 [tool.isort]
