--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,9 @@ dependencies = [
     "uvicorn[standard]==0.38.0",
     "fastapi==0.123.0",
     "python-multipart==0.0.20",
-    "python-toon==0.1.3"
+    "python-toon==0.1.3",
+    "streamlit-autorefresh>=1.0.1",
+    "aiosqlite>=0.20.0"
 ]
 
 [dependency-groups]
