--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,8 @@ dependencies = [
     "fastapi==0.123.0",
     "python-multipart==0.0.20",
     "python-toon==0.1.3",
-    "aiosqlite>=0.20.0"
+    "aiosqlite>=0.20.0",
+    "msgpack>=1.0.0",
 ]
 
 [dependency-groups]
