fix: making final adjustments

--- a/compose.yaml
+++ b/compose.yaml
@@ -2,7 +2,7 @@ services:
   web:
     build: .
     ports:
-      - "8000:8000"
+      - "${WEB_PORT:-8000}:${WEB_PORT:-8000}"
     env_file:
       - .env
     volumes:
@@ -19,8 +19,10 @@ services:
       - GCP_CREDENTIALS=/app/gcp_credentials.json
       - CACHE_FOLDER_PATH=/app/cache/
       - SQLITE_MEMORY_DATABASE=/app/db_data/memory.sqlite
+      - WEB_PORT=${WEB_PORT:-8000}
+    command: uvicorn streamlit_ui.api:app --host 0.0.0.0 --port ${WEB_PORT:-8000}
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:${WEB_PORT:-8000}/health"]
       interval: 60s
       timeout: 5s
       retries: 5
@@ -52,21 +54,23 @@ services:
   redis:
     image: redis:7
     ports:
-      - "6379:6379"
+      - "${REDIS_PORT:-6379}:${REDIS_PORT:-6379}"
+    command: redis-server --port ${REDIS_PORT:-6379}
   
   redis-commander:
     image: rediscommander/redis-commander
     environment:
-      - REDIS_HOSTS=local:redis:6379
+      - REDIS_HOSTS=local:redis:${REDIS_PORT:-6379}
     ports:
-      - "8081:8081"
+      - "${REDIS_COMMANDER_PORT:-8081}:${REDIS_COMMANDER_PORT:-8081}"
+    command: --port ${REDIS_COMMANDER_PORT:-8081}
 
   streamlit:
     build:
       context: .
       dockerfile: Dockerfile.streamlit
     ports:
-      - "8501:8501"
+      - "${STREAMLIT_PORT:-8501}:${STREAMLIT_PORT:-8501}"
     env_file:
       - .env
     volumes:
@@ -82,7 +86,9 @@ services:
       - GCP_CREDENTIALS=/app/gcp_credentials.json
       - CACHE_FOLDER_PATH=/app/cache/
       - SQLITE_MEMORY_DATABASE=/app/db_data/memory.sqlite
-      - API_BASE_URL=http://web:8000
+      - API_BASE_URL=http://web:${WEB_PORT:-8000}
+      - STREAMLIT_PORT=${STREAMLIT_PORT:-8501}
+    command: streamlit run app.py --server.port=${STREAMLIT_PORT:-8501} --server.address=0.0.0.0
     depends_on:
       web:
         condition: service_healthy
