--- a/streamlit_ui/pyproject.toml
+++ b/streamlit_ui/pyproject.toml
@@ -5,6 +5,12 @@ description = "Streamlit UI for Vir ChatBot"
 requires-python = ">=3.12"
 dependencies = [
     "streamlit==1.51.0",
-    "requests==2.31.0",
-    "asyncio==4.0.0"
+    "asyncio==4.0.0",
+    "httpx==0.28.1",
+]
+[dependency-groups]
+dev = [
+    "streamlit==1.51.0",
+    "asyncio==4.0.0",
+    "httpx==0.28.1",
 ]
