fix: chaging order

--- a/.env.example
+++ b/.env.example
@@ -2,16 +2,17 @@ GEMINI_API_KEY = "APIkeyHere"
 GCP_PROJECT = "ProjectHere"
 GCP_REGION = "GCPRegionHere"
 GCP_CREDENTIALS = "/path/to/credetentials.json
-LANGSMITH_API_KEY = "LangsmithAPIKeyHere" #optional
-LANGSMITH_TRACING_V2 = "true" #optional
-LANGSMITH_ENDPOINT = "https://api.smith.langchain.com" #optional
-LANGSMITH_PROJECT = "LangsmithProjectHere" #optional
 VECTORSTORE_PATH = "/path/to/vectorstore/folder"
 SQLITE_MEMORY_DATABASE = "/path/to/sqlite/folder"
 CACHE_FOLDER_PATH = "/path/to/cache/folder"
-PDF_FOLDER = "/path/to/pdf/folder"
 API_BASE_URL = "http://localhost:8000"
 WEB_PORT = 8000
 REDIS_PORT = 6379
 REDIS_COMMANDER_PORT = 8081
 STREAMLIT_PORT = 8501
+
+PDF_FOLDER = "/path/to/pdf/folder" #optional
+LANGSMITH_API_KEY = "LangsmithAPIKeyHere" #optional
+LANGSMITH_TRACING_V2 = "true" #optional
+LANGSMITH_ENDPOINT = "https://api.smith.langchain.com" #optional
+LANGSMITH_PROJECT = "LangsmithProjectHere" #optional
