fix: fixing env

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ GCP_REGION="us-central1"
 PDF_FOLDER="/path/to/your/pdfs_folder_path"
 VECTORSTORE_PATH="/path/to/vectorstore_folder_path"
 CACHE_FOLDER_PATH="/path/to/cache_folder_path"
-SQLITE_MEMORY_DATABASE="/path/to/memory.sqlite"
+SQLITE_MEMORY_DATABASE="/path/to/sqlite_folder"
 
 # Ports (Optional - defaults shown)
 WEB_PORT=8000
