fix: chaging repository structure

--- a/.env.example
+++ b/.env.example
@@ -13,8 +13,10 @@ SQLITE_MEMORY_DATABASE="/path/to/sqlite_folder"
 # Ports (Optional - defaults shown)
 WEB_PORT=8000
 REDIS_PORT=6379
-REDIS_COMMANDER_PORT=8081
 STREAMLIT_PORT=8501
+
+# Development only (used with --profile dev)
+REDIS_COMMANDER_PORT=8081
 
 # Streamlit UI Configuration
 API_BASE_URL="http://localhost:8000"  # Must match WEB_PORT
