--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,7 @@
 services:
   web:
     build: .
+    image: vir-chatbot:latest
     ports:
       - "${WEB_PORT:-8000}:${WEB_PORT:-8000}"
     env_file:
@@ -32,6 +33,7 @@ services:
 
   worker:
     build: .
+    image: vir-chatbot:latest
     command: celery -A agents.vir_chatbot.tasks worker -l info
     depends_on:
       - redis
