--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,15 +11,12 @@ dependencies = [
     "pandas==2.3.3",
     "google==3.0.0",
     "langchain==0.3.27",
-    "langchain-community>=0.3.28",
+    "langchain-community==0.3.28",
     "langchain-core==0.3.74",
     "langchain-google-genai==2.1.9",
     "langchain-google-vertexai==2.0.28",
     "pydantic-settings==2.11.0",
-    "ipykernel==7.1.0",
-    "pip==25.3",
     "faiss-cpu==1.12.0",
-    "langchain-docling==1.1.0",
     "docling==2.61.1",
     "langgraph-checkpoint-sqlite==3.0.0",
     "langgraph==1.0.1",
@@ -27,8 +24,10 @@ dependencies = [
     "fastapi==0.123.0",
     "python-multipart==0.0.20",
     "python-toon==0.1.3",
-    "aiosqlite>=0.20.0",
-    "msgpack>=1.0.0",
+    "aiosqlite>=0.20.0,<0.22.0",
+    "msgpack==1.0.0",
+    "torch==2.6.0",
+    "torchvision==0.21.0",
 ]
 
 [dependency-groups]
@@ -52,6 +51,19 @@ dev = [
     "python-multipart==0.0.20",
     "python-toon==0.1.3"
 ]
+
+[[tool.uv.index]]
+url = "https://download.pytorch.org/whl/cpu"
+name = "pytorch-cpu"
+explicit = true
+
+[tool.uv]
+environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
+
+[tool.uv.sources]
+torch = { index = "pytorch-cpu" }
+torchvision = { index = "pytorch-cpu" }
+torchaudio = { index = "pytorch-cpu" }
 
 [tool.isort]
 profile = "black"
