fix: fixing docker vunerability using non-root user

--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,7 @@ LANGSMITH_API_KEY="your_langsmith_key"
 LANGSMITH_TRACING_V2=true
 LANGSMITH_ENDPOINT="https://api.smith.langchain.com"
 LANGSMITH_PROJECT="vir-chatbot"
+
+# PUID and PGID (Optional - for setting container user permissions)
+PUID=1000
+PGID=1000
