fix: adding operations systems

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,11 @@ name = "pytorch-cpu"
 explicit = true
 
 [tool.uv]
-environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
+environments = [
+    "sys_platform == 'linux' and platform_machine == 'x86_64'",
+    "sys_platform == 'linux' and platform_machine == 'aarch64'",
+    "sys_platform == 'win32' and platform_machine == 'AMD64'",
+]
 
 [tool.uv.sources]
 torch = { index = "pytorch-cpu" }
