--- a/compose.yaml
+++ b/compose.yaml
@@ -67,7 +67,7 @@ services:
   redis-commander:
     profiles:
       - dev
-    image: rediscommander/redis-commander:snyk-fix-08c85f17c94a7f00df6fb21e8ea1d10d
+    image: rediscommander/redis-commander:latest
     environment:
       - REDIS_HOSTS=local:redis:${REDIS_PORT:-6379}
     ports:
