--- a/.env.example
+++ b/.env.example
@@ -13,8 +13,10 @@ SQLITE_MEMORY_DATABASE="/path/to/sqlite_folder"
 # Ports (Optional - defaults shown)
 WEB_PORT=8000
 REDIS_PORT=6379
-REDIS_COMMANDER_PORT=8081
 STREAMLIT_PORT=8501
+
+# Development only (used with --profile dev)
+REDIS_COMMANDER_PORT=8081
 
 # Streamlit UI Configuration
 API_BASE_URL="http://localhost:8000"  # Must match WEB_PORT
@@ -24,3 +26,7 @@ LANGSMITH_API_KEY="your_langsmith_key"
 LANGSMITH_TRACING_V2=true
 LANGSMITH_ENDPOINT="https://api.smith.langchain.com"
 LANGSMITH_PROJECT="vir-chatbot"
+
+# PUID and PGID (Optional - for setting container user permissions)
+PUID=1000
+PGID=1000
