--- a/Dockerfile.streamlit
+++ b/Dockerfile.streamlit
@@ -1,16 +1,28 @@
 FROM ghcr.io/astral-sh/uv:python3.12-bookworm-slim
 
-WORKDIR /app/streamlit_ui
+RUN useradd --create-home appuser \
+    && mkdir -p /app/frontend /app/vectorstore /app/pdfs /app/cache /app/db_data \
+    && chown -R appuser:appuser /app
+
+RUN apt-get update && apt-get install -y --no-install-recommends gosu \
+    && rm -rf /var/lib/apt/lists/*
+
+COPY entrypoint.sh /app/entrypoint.sh
+RUN chmod +x /app/entrypoint.sh
+
+ENTRYPOINT ["/app/entrypoint.sh"]
+
+WORKDIR /app/frontend
 
 ENV UV_COMPILE_BYTECODE=1
 ENV UV_LINK_MODE=copy
 
-COPY streamlit_ui/pyproject.toml streamlit_ui/uv.lock ./
+COPY frontend/pyproject.toml frontend/uv.lock ./
 
 RUN uv sync --locked --no-dev --no-install-project
 
-COPY streamlit_ui/*.py ./
+COPY frontend/*.py ./
 
-ENV PATH="/app/streamlit_ui/.venv/bin:$PATH"
+ENV PATH="/app/frontend/.venv/bin:$PATH"
 
 CMD ["streamlit", "run", "app.py", "--server.port=8501", "--server.address=0.0.0.0"]
